--- a/style.css
+++ b/style.css
@@ -29,6 +29,15 @@ body,
   left: 0;
 }
 
+.fullscreen {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+}
+
 #loading {
   z-index: 3;
   font-size: 36px;
