--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+
 * {
-  background: white;
-  color: black;
+  color: white;
+  font-family: 'Alfa Slab One';
 }
 
 body {
